[project]
name = "gaia_validators"
version = "0.2.0"
description = "Validators and types for Gaia and Ouranos"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "pydantic",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
